Add usage documentation

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
     <h1>openQA Log Analyzer</h1>
     <form id="log-form">
         <label for="log_url">Log URL:</label>
-        <input type="url" id="log_url" name="log_url" size="100" value="https://openqa.suse.de/tests/18961558/logfile?filename=autoinst-log.txt#line-1515" required>
+        <input type="url" id="log_url" name="log_url" size="100" value="" required>
         <button type="submit">Analyze</button>
         <input type="checkbox" id="ignore_cache" name="ignore_cache">
         <label for="ignore_cache">Ignore Cache</label>
