--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>openQA Log Analyzer</title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
