--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -70,7 +70,7 @@ th { background-color: #f2f2f2; font-weight: bold; }
     pointer-events: none;
     z-index: 20;
 }
-.mutex-arrow {
+.event-arrow {
     stroke: #333;
     stroke-width: 1.5;
     opacity: 0.9;
