--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,7 @@
         <h2>Merged Timeline</h2>
         <button id="reset-zoom-btn">Reset Zoom</button>
         <div id="timeline-container" style="position: relative;"></div>
+        <div id="sync-legend" class="timeline-legend"></div>
         <div id="timeline-legend" class="timeline-legend"></div>
     </div>
 
