Split the monolitic main.js and add UT for the frontend code

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,6 +40,6 @@
         <pre id="debug-log-content"></pre>
     </div>
 
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
